@@ -4,6 +4,7 @@
  - (djm) Add Markus' patch for compat wih OpenSSL < 0.9.6. 
    Known issue: Blowfish for SSH1 does not work
  - (stevesk) entropy.c: typo in debug message
+ - (djm) ssh-keygen -i needs seeded RNG; report from markus@
 
 20020307
  - (djm) OpenBSD CVS Sync
@@ -7827,4 +7828,4 @@
  - Wrote replacements for strlcpy and mkdtemp
  - Released 1.0pre1
 
-$Id: ChangeLog,v 1.1919 2002/03/11 00:16:34 stevesk Exp $
+$Id: ChangeLog,v 1.1920 2002/03/11 11:53:29 djm Exp $
